# ibovespa-prediction

ibovespa-prediction/: LICENSE  Makefile  README.md  pyproject.toml
ibovespa-prediction/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
ibovespa-prediction/notebooks/catboost_info/learn/: events.out.tfevents
ibovespa-prediction/reports/: streamlit.py
ibovespa-prediction/reports/figures/: accuracy_with_cross.csv  accuracy_without_cross.csv  ibov_feature_behaviors.pkl  ibov_model_auto_arima.html  ibov_model_br_cds.html  ibov_model_decision_trees.html  ibov_model_ets.html  ibov_model_naive.html  ibov_model_prophet.html  ibov_model_theta.html  ibov_train_test_split.html  seasonal_decomposition.html
