[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ibovespa_prediction"
version = "0.0.1"
description = "Modelo preditivo de fechamento di\u00e1rio do IBOVESPA"
authors = [
  { name = "Anderson Pacheco" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ibovespa_prediction"]
force_sort_within_sections = true
